--- a/css/main.css
+++ b/css/main.css
@@ -88,3 +88,312 @@
     line-height: 20px;
 
 }
+/*tab*/
+
+@media(min-width:768px){
+    .service{
+        width: 100%;
+        height: auto;
+        background-color: #fef8f5;
+        box-sizing: border-box;
+    }
+    
+    .services{
+        width: 100%;
+        height: auto;
+        padding-top: 20px;
+        box-sizing: border-box;
+    }
+    
+    .serhead{
+        width: 100%;
+        height: 20%;
+        text-align: center;
+        box-sizing: border-box;
+    }
+    
+    .serhead p{
+        font-family: sans-serif;
+        font-size: 22px;  
+        font-weight: 600;
+        color: #c2b7b1;
+    }
+    
+    
+    .serhead h2{
+        font-family: sans-serif;
+        font-size: 28px;
+        color: #4e4039;
+        font-weight: 800;
+    }
+    
+    .serbot{
+        width: 100%;
+        height: auto;
+        box-sizing: border-box;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    
+    .bot1{
+        width: 38%;
+        height: auto;
+        text-align: center;
+        margin-left: 8%;
+        background-color: white;
+        margin-top: 20px;
+        padding-top: 20px;
+        /* border: solid 1px red; */
+        box-shadow: 0px 0px 3px rgb(230, 221, 221);
+        border-radius: 15px;
+        padding: 30px;
+        box-sizing: border-box;
+    }
+    
+    .bot1 i{
+        font-size: 35px;
+        color: orangered;
+    }
+    
+    .bot1 h2{
+        font-family: sans-serif;
+        font-size: 18px;
+        color: #111;
+        padding-top: 20px;
+    
+    } 
+    
+    .bot1 p{
+        font-family: sans-serif;
+        font-size: 15px;
+        color: #111;
+        padding-top: 10px;
+        line-height: 20px;
+    
+    }
+}
+/*tab*/
+
+@media(min-width:1024px){
+    .service{
+        width: 100%;
+        height: auto;
+        background-color: #fef8f5;
+        box-sizing: border-box;
+    }
+    
+    .services{
+        width: 100%;
+        height: auto;
+        padding-top: 20px;
+        box-sizing: border-box;
+    }
+    
+    .serhead{
+        width: 100%;
+        height: 20%;
+        text-align: center;
+        box-sizing: border-box;
+    }
+    
+    .serhead p{
+        font-family: sans-serif;
+        font-size: 22px;  
+        font-weight: 600;
+        color: #c2b7b1;
+    }
+    
+    
+    .serhead h2{
+        font-family: sans-serif;
+        font-size: 28px;
+        color: #4e4039;
+        font-weight: 800;
+    }
+    
+    .serbot{
+        width: 100%;
+        height: auto;
+        box-sizing: border-box;
+        display: flex;
+        
+    }
+    
+    .bot1{
+        width: 20%;
+        height: auto;
+        text-align: center;
+        margin-left: 4%;
+        background-color: white;
+        margin-top: 20px;
+        padding-top: 20px;
+        /* border: solid 1px red; */
+        box-shadow: 0px 0px 3px rgb(230, 221, 221);
+        border-radius: 15px;
+        padding: 30px;
+        box-sizing: border-box;
+    }
+    
+    .bot1 i{
+        font-size: 35px;
+        color: orangered;
+    }
+    
+    .bot1 h2{
+        font-family: sans-serif;
+        font-size: 18px;
+        color: #111;
+        padding-top: 20px;
+    
+    } 
+    
+    .bot1 p{
+        font-family: sans-serif;
+        font-size: 15px;
+        color: #111;
+        padding-top: 10px;
+        line-height: 20px;
+    
+    }
+}
+/*portfolio*/
+.folio{
+    width: 100%;
+        height: 20%;
+    text-align: center;
+    box-sizing: border-box;
+    margin-top: 30px;
+}
+.starts p{
+    font-size: 24px;
+    font-weight: 700;
+    padding-bottom: 0;
+    line-height: 1px;
+    margin-bottom: 15px;
+    color: #c2b7b1;
+    font-family:"Raleway",sans-serif;
+}
+.starts h2{
+padding-bottom: 15px;
+    margin-bottom: 15px;
+    font-size: 32px;
+    font-weight: 700;
+    color: #4e4039;
+}
+.apps{
+    display: flex;
+    margin-left: 40px;
+  
+}
+.apps h3{
+    padding-left: 30px;
+}
+.pic{
+    width: 100%;
+}
+.pic1{
+width: 100%;
+}
+.pic1 img{
+    width: 100%;
+    padding: 13px;
+  
+}
+/*tab*/
+@media(min-width:768px){
+    .folio{
+        width: 100%;
+            height: 20%;
+        text-align: center;
+        box-sizing: border-box;
+        margin-top: 30px;
+    }
+    .starts p{
+        font-size: 26px;
+        font-weight: 700;
+        padding-bottom: 0;
+        line-height: 1px;
+        margin-bottom: 15px;
+        color: #c2b7b1;
+        font-family:"Raleway",sans-serif;
+    }
+    .starts h2{
+    padding-bottom: 15px;
+        margin-bottom: 15px;
+        font-size: 34px;
+        font-weight: 700;
+        color: #4e4039;
+    }
+    .apps{
+        display: flex;
+        margin-left: 250px;
+      
+    }
+    .apps h3{
+        padding-left: 30px;
+    }
+    .pic{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .pic1{
+    width: 49%;
+    }
+    .pic1 img{
+        width: 100%;
+        padding: 13px;
+        padding-left: 30px;
+        padding-right: 30px;
+      
+    }
+}
+/*lab*/
+@media(min-width:1024px){
+    .folio{
+        width: 100%;
+            height: 20%;
+        text-align: center;
+        box-sizing: border-box;
+        margin-top: 30px;
+    }
+    .starts p{
+        font-size: 26px;
+        font-weight: 700;
+        padding-bottom: 0;
+        line-height: 1px;
+        margin-bottom: 15px;
+        color: #c2b7b1;
+        font-family:"Raleway",sans-serif;
+    }
+    .starts h2{
+    padding-bottom: 15px;
+        margin-bottom: 15px;
+        font-size: 34px;
+        font-weight: 700;
+        color: #4e4039;
+    }
+    .apps{
+        display: flex;
+        margin-left: 350px;
+      
+    }
+    .apps h3{
+        padding-left: 30px;
+    }
+    .pic{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .pic1{
+    width: 33.33%;
+    }
+    .pic1 img{
+        width: 100%;
+        padding: 13px;
+        padding-left: 30px;
+        padding-right: 30px;
+      
+    }
+}
